[gd_scene load_steps=3 format=3 uid="uid://gaouasd81rum"]

[ext_resource type="Script" uid="uid://fkcilq2j0ofr" path="res://scripts/nav.gd" id="1_2yuxw"]
[ext_resource type="PackedScene" uid="uid://cd482adot0byk" path="res://scenes/super_page_button.tscn" id="2_nxecq"]

[node name="Nav" type="Node3D"]
script = ExtResource("1_2yuxw")

[node name="labelRight" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.353, 1.008, -0.359)
text = "About me"

[node name="buttonRight" parent="." instance=ExtResource("2_nxecq")]
transform = Transform3D(-1.0927847e-08, 0.25, 0, -0.25, -1.0927847e-08, 0, 0, 0, 0.25, 3.443542, 1.6207573, -0.38487053)
active = true

[node name="labelLeft" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3526487, 1.0082266, -0.35875425)
text = "Projects"

[node name="buttonLeft" parent="." instance=ExtResource("2_nxecq")]
transform = Transform3D(-1.0927847e-08, -0.25, 0, 0.25, -1.0927847e-08, 0, 0, 0, 0.25, -3.444, 1.621, -0.385)
active = true

[node name="head" type="Label3D" parent="."]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0.7029401, 1.6418065)
text = "Home"

[connection signal="pressed" from="buttonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="buttonLeft" to="." method="_on_button_left_pressed"]
